tests/dataset/tpc-ds/compiler/go/q2.error
go run error: exit status 1
# command-line-arguments
/tmp/TestGoCompiler_TPCDSq234909661/001/main.go:400:2: syntax error: unexpected name at64 after top level declaration
